--- a/index.html
+++ b/index.html
@@ -105,21 +105,38 @@
                     <nav class="navbar">
                         <ul class="navbar__list">
                             <li class="navbar__item">
-                                <a href="#!" class="navbar__link">Home</a>
-                            </li>
-                            <li class="navbar__item">
-                                <a href="#!" class="navbar__link">About</a>
-                            </li>
-                            <li class="navbar__item">
-                                <a href="#!" class="navbar__link"
-                                    >Services & Rates</a
+                                <a href="#!" class="navbar__link" title="Home"
+                                    >Home</a
                                 >
                             </li>
                             <li class="navbar__item">
-                                <a href="#!" class="navbar__link">Reviews</a>
+                                <a href="#!" class="navbar__link" title="About"
+                                    >About</a
+                                >
                             </li>
                             <li class="navbar__item">
-                                <a href="#!" class="navbar__link"
+                                <a
+                                    href="#!"
+                                    class="navbar__link"
+                                    title="Services & Rates"
+                                >
+                                    Services & Rates
+                                </a>
+                            </li>
+                            <li class="navbar__item">
+                                <a
+                                    href="#!"
+                                    class="navbar__link"
+                                    title="Reviews"
+                                >
+                                    Reviews</a
+                                >
+                            </li>
+                            <li class="navbar__item">
+                                <a
+                                    href="#!"
+                                    class="navbar__link"
+                                    title="Contacts us"
                                     >Contacts us</a
                                 >
                             </li>
@@ -135,5 +152,45 @@
                 </div>
             </div>
         </header>
+
+        <!-- Hero -->
+        <div class="section hero">
+            <div class="container">
+                <div class="hero__inner">
+                    <!-- Hero Media -->
+                    <div class="hero-media">
+                        <div class="hero-img-wrap">
+                            <img
+                                src="./assets/img/pet-01.png"
+                                alt=""
+                                class="hero-media__img"
+                            />
+
+                            <!-- Decor -->
+                            <img
+                                src="./assets/img/decor-01.svg"
+                                alt=""
+                                class="hero-img__decor hero-img__decor-left"
+                            />
+                            <img
+                                src="./assets/img/decor-02.svg"
+                                alt=""
+                                class="hero-img__decor hero-img__decor-right"
+                            />
+                        </div>
+                        <div class="hero-img-wrap hero-img-small">
+                            <img
+                                src="./assets/img/pet-02.png"
+                                alt=""
+                                class="hero-media__img"
+                            />
+                        </div>
+                    </div>
+
+                    <!-- Hero content -->
+                    <div class="hero-content"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
