--- a/index.html
+++ b/index.html
@@ -185,10 +185,79 @@
                                 class="hero-media__img"
                             />
                         </div>
+
+                        <!-- Hero List -->
+                        <div class="hero-list">
+                            <!-- Hero item 1 -->
+                            <div class="hero-list-item">
+                                <div class="hero-item-media">
+                                    <figure>
+                                        <img
+                                            src="./assets/img/pet-03.png"
+                                            alt=""
+                                            class="hero-item__img"
+                                        />
+                                    </figure>
+                                </div>
+                                <div class="hero-item-content">
+                                    <h4 class="hero-item__title">Pet Health</h4>
+                                    <div class="skeleton"></div>
+                                    <div
+                                        class="skeleton"
+                                        style="width: 39px"
+                                    ></div>
+                                </div>
+                            </div>
+                            <div class="separation"></div>
+                            <!-- Hero item 2 -->
+                            <div class="hero-list-item">
+                                <div class="hero-item-media">
+                                    <figure>
+                                        <img
+                                            src="./assets/img/pet-04.png"
+                                            alt=""
+                                            class="hero-item__img"
+                                        />
+                                    </figure>
+                                </div>
+                                <div class="hero-item-content">
+                                    <h4 class="hero-item__title">Pet Health</h4>
+                                    <div class="skeleton"></div>
+                                    <div
+                                        class="skeleton"
+                                        style="width: 39px"
+                                    ></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Hero content -->
-                    <div class="hero-content"></div>
+                    <div class="hero-content">
+                        <h1 class="hero__title">
+                            Established & Trusted Pet Care Service
+                        </h1>
+                        <p class="hero__desc section-desc__16">
+                            Discover a wide variety of Pawsitive services to
+                            choose from, including daycare, private walks,
+                            office duty and spa.
+                        </p>
+                        <div class="hero__row">
+                            <a href="#!" class="btn hero-cta__btn">
+                                Book a Meet
+
+                                <span
+                                    ><img
+                                        src="./assets/icon/right.svg"
+                                        alt=""
+                                        class="hero__arrow"
+                                /></span>
+                            </a>
+                            <a href="#!" class="hero-cta__link">
+                                Schedule a Call
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
