--- a/index.html
+++ b/index.html
@@ -261,5 +261,68 @@
                 </div>
             </div>
         </div>
+
+        <!-- Main -->
+
+        <main>
+            <!-- about -->
+            <section class="about">
+                <div class="container">
+                    <div class="about__inner">
+                        <section class="about__content">
+                            <p class="about__label">// About //</p>
+                            <h2 class="about__title section-heading">
+                                Best Agency For Your Pet.
+                            </h2>
+                            <p class="about__desc section-desc__16">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <div class="about-list__check">
+                                <span class="about__check">
+                                    Certified Groomer
+                                </span>
+                                <span class="about__check">Animal Lover</span>
+                                <span class="about__check">
+                                    14+ Years Experience
+                                </span>
+                                <span class="about__check">
+                                    Pet Parent Of 3 Dogs
+                                </span>
+                            </div>
+                        </section>
+                        <div class="about__media">
+                            <div class="about__card">
+                                <b class="about__card__title">20+</b>
+                                <p class="about__card__desc">
+                                    Years Experience
+                                </p>
+                                <img
+                                    src="./assets/img/about-card-decor.svg"
+                                    alt=""
+                                    class="about__card__decor"
+                                />
+                            </div>
+                            <figure class="about__img__wrap">
+                                <img
+                                    src="./assets/img/about-01.png"
+                                    alt="Best Agency For
+                                Your Pet."
+                                    class="about__img"
+                                />
+                            </figure>
+                            <img
+                                src="./assets/img/about-decor-01.svg"
+                                alt=""
+                                class="about__img__decor"
+                            />
+                        </div>
+                        <div class="about__media"></div>
+                        <section class="about__content"></section>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
