--- a/index.html
+++ b/index.html
@@ -318,8 +318,142 @@
                                 class="about__img__decor"
                             />
                         </div>
-                        <div class="about__media"></div>
-                        <section class="about__content"></section>
+                        <div class="about__media">
+                            <figure
+                                class="about__img__wrap about__img__wrap--bottom"
+                            >
+                                <img
+                                    src="./assets/img/about-02.png"
+                                    alt="Best Agency For
+                                Your Pet."
+                                    class="about__img"
+                                />
+                                <div class="about__decor__bottom">
+                                    <img
+                                        src="./assets/img/about-decor-bottom-01.svg"
+                                        alt=""
+                                        class="about__decor__bottom--img"
+                                    />
+                                    <img
+                                        src="./assets/img/about-decor-bottom-02.svg"
+                                        alt=""
+                                        class="about__decor__bottom--img"
+                                    />
+                                    <img
+                                        src="./assets/img/about-decor-bottom-03.svg"
+                                        alt=""
+                                        class="about__decor__bottom--img"
+                                    />
+                                    <img
+                                        src="./assets/img/about-decor-bottom-05.svg"
+                                        alt=""
+                                        class="about__decor__bottom--img"
+                                    />
+                                    <img
+                                        src="./assets/img/about-decor-bottom-06.svg"
+                                        alt=""
+                                        class="about__decor__bottom--img"
+                                    />
+                                    <img
+                                        src="./assets/img/about-decor-bottom-04.svg"
+                                        alt=""
+                                        class="about__decor__bottom--img"
+                                    />
+                                    <img
+                                        src="./assets/img/about-decor-bottom-04.svg"
+                                        alt=""
+                                        class="about__decor__bottom--img"
+                                    />
+                                    <img
+                                        src="./assets/img/about-decor-bottom-04.svg"
+                                        alt=""
+                                        class="about__decor__bottom--img"
+                                    />
+                                </div>
+                            </figure>
+                        </div>
+                        <section class="about__content">
+                            <h2 class="section-heading">
+                                Taking A Vacation? So Is Your Pet.
+                            </h2>
+                            <p class="about__desc--bottom section-desc__16">
+                                We offer long-term and short-term boarding.
+                                Every dog has its own private, spacious room and
+                                daily individual time in our large play yard.
+                            </p>
+                            <div class="about__tab">
+                                <ul class="about__tab__list">
+                                    <li
+                                        class="about__tab__item about__tab__item--active"
+                                    >
+                                        <a href="#!">
+                                            <img
+                                                src="./assets/img/about-item-icon-01.png"
+                                                alt=""
+                                                class="about__item--icon"
+                                            />
+                                            Pet Boarding
+                                        </a>
+                                    </li>
+                                    <li class="about__tab__item">
+                                        <a href="#!">
+                                            <img
+                                                src="./assets/img/about-item-icon-02.png"
+                                                alt=""
+                                                class="about__item--icon"
+                                            />
+                                            Pet Daycare</a
+                                        >
+                                    </li>
+                                    <li class="about__tab__item">
+                                        <a href="#!">
+                                            <img
+                                                src="./assets/img/about-item-icon-03.png"
+                                                alt=""
+                                                class="about__item--icon"
+                                            />
+                                            Pet Transport</a
+                                        >
+                                    </li>
+                                </ul>
+                                <div class="about__tab__desc">
+                                    <p
+                                        class="about__tab__item--desc section-desc__14"
+                                    >
+                                        While you're on holiday, here's where
+                                        your furry friends will spend their
+                                        time.01
+                                    </p>
+                                    <a href="#!" class="about__tab--link"
+                                        >View more</a
+                                    >
+                                </div>
+                                <div class="about__tab__desc">
+                                    <p
+                                        class="about__tab__item--desc section-desc__14"
+                                    >
+                                        While you're on holiday, here's where
+                                        your furry friends will spend their
+                                        time.02
+                                    </p>
+                                    <a href="#!" class="about__tab--link"
+                                        >View more</a
+                                    >
+                                </div>
+                                <div class="about__tab__desc">
+                                    <p
+                                        class="about__tab__item--desc section-desc__14"
+                                    >
+                                        While you're on holiday, here's where
+                                        your furry friends will spend their
+                                        time.03
+                                    </p>
+                                    <a href="#!" class="about__tab--link"
+                                        >View more</a
+                                    >
+                                </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </section>
