--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                     class="about__card__decor"
                                 />
                             </div>
-                            <figure class="about__img__wrap">
+                            <figure class="img__wrap">
                                 <img
                                     src="./assets/img/about-01.png"
                                     alt="Best Agency For
@@ -319,9 +319,7 @@
                             />
                         </div>
                         <div class="about__media">
-                            <figure
-                                class="about__img__wrap about__img__wrap--bottom"
-                            >
+                            <figure class="img__wrap about__img__wrap--bottom">
                                 <img
                                     src="./assets/img/about-02.png"
                                     alt="Best Agency For
@@ -416,7 +414,9 @@
                                         >
                                     </li>
                                 </ul>
-                                <div class="about__tab__desc">
+                                <div
+                                    class="about__tab__desc about__tab__desc--active"
+                                >
                                     <p
                                         class="about__tab__item--desc section-desc__14"
                                     >
@@ -455,6 +455,169 @@
                             </div>
                         </section>
                     </div>
+                </div>
+            </section>
+            <!-- service -->
+            <section class="service">
+                <div class="container">
+                    <section class="service__row">
+                        <p class="service-label">What we do for you?</p>
+                        <h2 class="section-heading">Our Services</h2>
+                    </section>
+
+                    <section class="service__inner">
+                        <div class="serivce__column">
+                            <!-- Item 1 -->
+                            <article class="service__card">
+                                <p
+                                    class="service__card__title section-desc__22"
+                                >
+                                    Puppy Sitting
+                                </p>
+                                <p class="service__card__desc section-desc__14">
+                                    Helping your new pup to be a good boy or
+                                    girl isn’t always easy, but we’re here to
+                                    help.
+                                </p>
+                                <a
+                                    href=""
+                                    class="service__card__link section__12"
+                                >
+                                    Read More
+                                    <img
+                                        src="./assets/icon/arrow-up-right.svg"
+                                        alt=""
+                                    />
+                                </a>
+                            </article>
+                            <!-- Item 2 -->
+                            <article class="service__card">
+                                <p
+                                    class="service__card__title section-desc__22"
+                                >
+                                    Dog Walking
+                                </p>
+                                <p class="service__card__desc section-desc__14">
+                                    Choose from a 30, 45, or 60-minute visit to
+                                    give your pet their daily dose of
+                                    fun-filled.
+                                </p>
+                                <a
+                                    href=""
+                                    class="service__card__link section__12"
+                                >
+                                    Read More
+                                    <img
+                                        src="./assets/icon/arrow-up-right.svg"
+                                        alt=""
+                                    />
+                                </a>
+                            </article>
+                            <!-- Item 3 -->
+                            <article class="service__card">
+                                <p
+                                    class="service__card__title section-desc__22"
+                                >
+                                    Pet Sitting
+                                </p>
+                                <p class="service__card__desc section-desc__14">
+                                    While you’re away we can make sure your pet
+                                    has all the food, water, exercise, and, of
+                                    course.
+                                </p>
+                                <a
+                                    href=""
+                                    class="service__card__link section__12"
+                                >
+                                    Read More
+                                    <img
+                                        src="./assets/icon/arrow-up-right.svg"
+                                        alt=""
+                                    />
+                                </a>
+                            </article>
+                        </div>
+                        <div class="serivce__column">
+                            <figure class="img__wrap service__img__wrap">
+                                <img
+                                    src="./assets/img/serivce-01.png"
+                                    alt=""
+                                    class="about__img service__img"
+                                />
+                            </figure>
+                        </div>
+                        <div class="serivce__column">
+                            <!-- Item 4 -->
+                            <article class="service__card">
+                                <p
+                                    class="service__card__title section-desc__22"
+                                >
+                                    Overnight Care
+                                </p>
+                                <p class="service__card__desc section-desc__14">
+                                    If you’re away for the night, we can stay
+                                    the night or stop by in the evening and
+                                    morning.
+                                </p>
+                                <a
+                                    href=""
+                                    class="service__card__link section__12"
+                                >
+                                    Read More
+                                    <img
+                                        src="./assets/icon/arrow-up-right.svg"
+                                        alt=""
+                                    />
+                                </a>
+                            </article>
+                            <!-- Item 5 -->
+                            <article class="service__card">
+                                <p
+                                    class="service__card__title section-desc__22"
+                                >
+                                    Pet Taxi
+                                </p>
+                                <p class="service__card__desc section-desc__14">
+                                    Does your pet need a lift to the groomers,
+                                    vet, or dog park? We’ve got their tail
+                                    covered.
+                                </p>
+                                <a
+                                    href=""
+                                    class="service__card__link section__12"
+                                >
+                                    Read More
+                                    <img
+                                        src="./assets/icon/arrow-up-right.svg"
+                                        alt=""
+                                    />
+                                </a>
+                            </article>
+                            <!-- Item 6-->
+                            <article class="service__card">
+                                <p
+                                    class="service__card__title section-desc__22"
+                                >
+                                    Pet Medical Admin
+                                </p>
+                                <p class="service__card__desc section-desc__14">
+                                    Our team of experienced professionals can
+                                    help with everything from pills to
+                                    injections.
+                                </p>
+                                <a
+                                    href=""
+                                    class="service__card__link section__12"
+                                >
+                                    Read More
+                                    <img
+                                        src="./assets/icon/arrow-up-right.svg"
+                                        alt=""
+                                    />
+                                </a>
+                            </article>
+                        </div>
+                    </section>
                 </div>
             </section>
         </main>
