--- a/index.html
+++ b/index.html
@@ -538,13 +538,18 @@
                             </article>
                         </div>
                         <div class="serivce__column">
-                            <figure class="img__wrap service__img__wrap">
+                            <figure class="service__img__wrap">
                                 <img
                                     src="./assets/img/serivce-01.png"
                                     alt=""
-                                    class="about__img service__img"
+                                    class="service__img"
                                 />
                             </figure>
+                            <div class="service-cta">
+                                <a href="#!" class="btn service-cta__link"
+                                    >View All Services</a
+                                >
+                            </div>
                         </div>
                         <div class="serivce__column">
                             <!-- Item 4 -->
