--- a/index.html
+++ b/index.html
@@ -625,6 +625,75 @@
                     </section>
                 </div>
             </section>
+
+            <!-- Staff -->
+            <section class="staff">
+                <div class="container">
+                    <div class="staff-row">
+                        <p class="staff__label">Pet Care Staff</p>
+                        <h2 class="staff__heading section-heading">
+                            Meet Our Groomers
+                        </h2>
+                    </div>
+                    <div class="staff-list">
+                        <!-- staff item 1 -->
+                        <article class="staff__item">
+                            <figure class="staff__item-wrap">
+                                <img
+                                    src="./assets/img/staff-01.png"
+                                    alt=""
+                                    class="staff__item__img"
+                                />
+                            </figure>
+                            <p class="staff__item__position">Pet Trainer</p>
+                            <h3 class="staff__item__name">Meghan Samit</h3>
+                        </article>
+                        <!-- staff item 2 -->
+                        <article class="staff__item">
+                            <figure class="staff__item-wrap">
+                                <img
+                                    src="./assets/img/staff-02.png"
+                                    alt=""
+                                    class="staff__item__img"
+                                />
+                            </figure>
+                            <p class="staff__item__position">Veterinarian</p>
+                            <h3 class="staff__item__name">Alissa Silva</h3>
+                        </article>
+                        <!-- staff item 3 -->
+                        <article class="staff__item">
+                            <figure class="staff__item-wrap">
+                                <img
+                                    src="./assets/img/staff-03.png"
+                                    alt=""
+                                    class="staff__item__img"
+                                />
+                            </figure>
+                            <p class="staff__item__position">Veterinarian</p>
+                            <h3 class="staff__item__name">Cindy Harris</h3>
+                        </article>
+                        <!-- staff item 4 -->
+                        <article class="staff__item">
+                            <figure class="staff__item-wrap">
+                                <img
+                                    src="./assets/img/staff-04.png"
+                                    alt=""
+                                    class="staff__item__img"
+                                />
+                            </figure>
+                            <p class="staff__item__position">
+                                Animal Caretaker
+                            </p>
+                            <h3 class="staff__item__name">Lucas Tony</h3>
+                        </article>
+                    </div>
+                    <div class="staff-cta">
+                        <a href="#!" class="btn staff-cta__link"
+                            >View All Team</a
+                        >
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
