--- a/index.html
+++ b/index.html
@@ -694,6 +694,227 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Price -->
+            <section class="price">
+                <div class="container">
+                    <section class="price-row">
+                        <h2 class="section-heading">The Best Choice</h2>
+                        <p class="price__desc section-desc__16">
+                            We offer long-term and short-term boarding. Every
+                            dog has its own private, spacious room and daily
+                            individual time in our large play yard.
+                        </p>
+
+                        <div class="price-switch-wrap">
+                            <input
+                                type="checkbox"
+                                name=""
+                                id="price-switch"
+                                class="price-switch__input"
+                                hidden
+                            />
+                            <label
+                                for="price-switch"
+                                class="price-switch__label"
+                            >
+                                <span class="price-switch__value">Monthly</span>
+                                <span class="price-switch__value">Yearly</span>
+                            </label>
+                        </div>
+                    </section>
+                    <section class="price-list">
+                        <!-- Price Item 1 -->
+                        <article class="price__item">
+                            <p class="price__item__label">Basic</p>
+                            <p class="price__item__title">Day care</p>
+                            <b class="price__item__price-value">$150</b>
+                            <button class="btn price__item--link">
+                                Purchase Now
+                            </button>
+
+                            <ul class="price__item-checklist">
+                                <li class="price__item-checklist__item">
+                                    <span>Single room</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Socialist Exercise</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Custom Meals</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Spa and Grooming</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Excercise 2x</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Custom Meals</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Grooming 2x</span>
+                                </li>
+                            </ul>
+                        </article>
+                        <!-- Price Item 1 -->
+                        <article class="price__item">
+                            <p class="price__item__label">Exclusive</p>
+                            <p class="price__item__title">2X Care</p>
+                            <b class="price__item__price-value">$199</b>
+                            <a href="#!" class="btn price__item--link"
+                                >Purchase Now</a
+                            >
+                            <ul class="price__item-checklist">
+                                <li class="price__item-checklist__item">
+                                    <span>Single room</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Socialist Exercise</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Custom Meals</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Spa and Grooming</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Excercise 2x</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Custom Meals</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Grooming 2x</span>
+                                </li>
+                            </ul>
+                        </article>
+                        <!-- Price Item 3 -->
+                        <article class="price__item">
+                            <p class="price__item__label">Platinum</p>
+                            <p class="price__item__title">4X Care</p>
+                            <b class="price__item__price-value">$299</b>
+                            <a href="#!" class="btn price__item--link"
+                                >Purchase Now</a
+                            >
+                            <ul class="price__item-checklist">
+                                <li class="price__item-checklist__item">
+                                    <span>Single room</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Socialist Exercise</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Custom Meals</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Spa and Grooming</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Excercise 2x</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Custom Meals</span>
+                                </li>
+                                <li class="price__item-checklist__item">
+                                    <span>Grooming 2x</span>
+                                </li>
+                            </ul>
+                        </article>
+                    </section>
+                </div>
+            </section>
+
+            <!-- Reviews -->
+            <section class="review">
+                <div class="container">
+                    <div class="review-inner">
+                        <button class="review__control">
+                            <svg
+                                width="20"
+                                height="21"
+                                viewBox="0 0 20 21"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M16.875 10.9985H3.125"
+                                    stroke="currentColor"
+                                    stroke-width="1.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                                <path
+                                    d="M8.75 5.37354L3.125 10.9985L8.75 16.6235"
+                                    stroke="currentColor"
+                                    stroke-width="1.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                        <div class="review-body">
+                            <article class="review-list">
+                                <figure class="review__media">
+                                    <img
+                                        src="./assets/img/review.png"
+                                        alt=""
+                                        class="review__media__img"
+                                    />
+                                </figure>
+                                <div class="review__content">
+                                    <h2 class="section-heading">Our Reviews</h2>
+                                    <p class="review__desc">
+                                        “It was very comforting to recieve a
+                                        text and pics each day about our pets
+                                        and how they were doing. It was also
+                                        nice that my pets were in the
+                                        comfortable environment of their own
+                                        home and received playfull attention
+                                        from our pet sitters as well. Thanks so
+                                        much!”
+                                    </p>
+                                    <span class="review__author"
+                                        >Karla Deras</span
+                                    >
+                                </div>
+                            </article>
+                            <div class="review-dots">
+                                <div
+                                    class="review__dot review__dot--active"
+                                ></div>
+                                <div class="review__dot"></div>
+                                <div class="review__dot"></div>
+                                <div class="review__dot"></div>
+                            </div>
+                        </div>
+                        <button class="review__control">
+                            <svg
+                                width="20"
+                                height="21"
+                                viewBox="0 0 20 21"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M3.125 10.9985H16.875"
+                                    stroke="currentColor"
+                                    stroke-width="1.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                                <path
+                                    d="M11.25 5.37354L16.875 10.9985L11.25 16.6235"
+                                    stroke="currentColor"
+                                    stroke-width="1.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
