--- a/index.html
+++ b/index.html
@@ -915,6 +915,274 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Blog -->
+            <section class="blog">
+                <div class="container">
+                    <section class="blog-row">
+                        <h2 class="section-heading">Our Blog</h2>
+                        <div class="blog-content">
+                            <p class="section-desc__16">
+                                Stay up to date with the latest tech trands and
+                                news in the pets.
+                            </p>
+                            <a href="#!" class="btn blog__cta">View All Blog</a>
+                        </div>
+                    </section>
+                    <div class="blog-list">
+                        <!-- Blog Item 1 -->
+                        <article class="blog__item">
+                            <figure class="blog__item__wrap">
+                                <time class="blog__item__time"
+                                    >21 june 2021</time
+                                >
+                                <img
+                                    src="./assets/img/blog-01.png"
+                                    alt=""
+                                    class="blog__item__img"
+                                />
+                            </figure>
+                            <h3 class="blog__item__title">
+                                Building Bonds and Trusting Relationships with
+                                Your Pets.
+                            </h3>
+                            <p class="section-desc__14 blog__item__desc">
+                                There isn’t a relationship around that can
+                                survive without trust. My relationship with my
+                                dog Peyton is deep...
+                            </p>
+                        </article>
+                        <!-- Blog Item 2 -->
+                        <article class="blog__item">
+                            <figure class="blog__item__wrap">
+                                <time class="blog__item__time"
+                                    >28 june 2021</time
+                                >
+                                <img
+                                    src="./assets/img/blog-02.png"
+                                    alt=""
+                                    class="blog__item__img"
+                                />
+                            </figure>
+                            <h3 class="blog__item__title">
+                                Celebrity pet photographer Grace Chon on taking
+                                ...
+                            </h3>
+                            <p class="section-desc__14 blog__item__desc">
+                                Doting pet parents have a relentless need to
+                                constantly photograph every adorable pet
+                                moment...
+                            </p>
+                        </article>
+                        <!-- Blog Item 3 -->
+                        <article class="blog__item">
+                            <figure class="blog__item__wrap">
+                                <time class="blog__item__time"
+                                    >10 july 2021</time
+                                >
+                                <img
+                                    src="./assets/img/blog-03.png"
+                                    alt=""
+                                    class="blog__item__img"
+                                />
+                            </figure>
+                            <h3 class="blog__item__title">
+                                5 Simple Tricks To Create A More Conscious ...
+                            </h3>
+                            <p class="section-desc__14 blog__item__desc">
+                                It is easy to forget that animals are living
+                                creatures with a beating heart.
+                            </p>
+                        </article>
+                    </div>
+                </div>
+            </section>
         </main>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-inner">
+                    <div class="footer-left">
+                        <img
+                            src="./assets/img/Logo.svg"
+                            alt=""
+                            class="footer__logo"
+                        />
+                        <form action="" class="subrice-form">
+                            <input
+                                type="email"
+                                name=""
+                                id="subrice__input"
+                                class="subrice__input--email"
+                                placeholder="Enter your email"
+                            />
+                            <button class="subrice__btn">
+                                <svg
+                                    width="18"
+                                    height="19"
+                                    viewBox="0 0 18 19"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M2.8125 9.00195H15.1875"
+                                        stroke="white"
+                                        stroke-width="1.5"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                    <path
+                                        d="M10.125 3.93945L15.1875 9.00195L10.125 14.0645"
+                                        stroke="white"
+                                        stroke-width="1.5"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                        </form>
+
+                        <h3 class="footer-left__title">Follow Us</h3>
+
+                        <div class="footer-social">
+                            <div class="footer-social__wrap">
+                                <img
+                                    src="./assets/img/facebook.png"
+                                    alt=""
+                                    class="footer-social__img"
+                                />
+                            </div>
+                            <div class="footer-social__wrap">
+                                <img
+                                    src="./assets/img/twiter.png"
+                                    alt=""
+                                    class="footer-social__img"
+                                />
+                            </div>
+                            <div class="footer-social__wrap">
+                                <img
+                                    src="./assets/img/linkin.png"
+                                    alt=""
+                                    class="footer-social__img"
+                                />
+                            </div>
+                            <div class="footer-social__wrap">
+                                <img
+                                    src="./assets/img/intargram.png"
+                                    alt=""
+                                    class="footer-social__img"
+                                />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-right">
+                        <div class="footer-right-body">
+                            <section class="footer-right-column">
+                                <h3 class="footer-right__title">Explore</h3>
+                                <ul class="footer-right-list">
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            About Us
+                                        </a>
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            Services
+                                        </a>
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            Our Team
+                                        </a>
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            Adopt Pet
+                                        </a>
+                                    </li>
+                                </ul>
+                            </section>
+                            <section class="footer-right-column">
+                                <h3 class="footer-right__title">
+                                    Useful links
+                                </h3>
+                                <ul class="footer-right-list">
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            FAQs
+                                        </a>
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            Shop
+                                        </a>
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            Privacy Policy
+                                        </a>
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            Terms of Use
+                                        </a>
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            Site Map
+                                        </a>
+                                    </li>
+                                </ul>
+                            </section>
+                            <section class="footer-right-column">
+                                <h3 class="footer-right__title">
+                                    Contact Info
+                                </h3>
+                                <ul class="footer-right-list">
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            abc@gmail.com
+                                        </a>
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            0 (800)-000-00-00
+                                        </a>
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <a href="#!" class="footer-right__link">
+                                            New York, NY, Rocawy 7
+                                        </a>
+                                    </li>
+                                </ul>
+                            </section>
+                            <section class="footer-right-column">
+                                <h3 class="footer-right__title">
+                                    Opening Time
+                                </h3>
+                                <ul class="footer-right-list">
+                                    <li class="footer-right__item">
+                                        <time class="footer-right__link"
+                                            >Mon – Fri : 08.00 am – 20.00
+                                            pm</time
+                                        >
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <time class="footer-right__link"
+                                            >Saturday : 09.00 am – 20.00
+                                            pm</time
+                                        >
+                                    </li>
+                                    <li class="footer-right__item">
+                                        <time class="footer-right__link"
+                                            >Sunday: We are Closed</time
+                                        >
+                                    </li>
+                                </ul>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
