--- a/index.html
+++ b/index.html
@@ -1182,6 +1182,7 @@
                         </div>
                     </div>
                 </div>
+                <p class="copyright">Copyright & Design By Uihut</p>
             </div>
         </footer>
     </body>
